# langchain-legal-rag

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
old/: pdfparse2.py  pdfparser.py  test.py
src/chains/: prompts.py  rag_chain.py
src/core/: config.py
src/data/: loader.py  preprocessor.py
src/models/: llm.py  retrievers.py
src/utils/: config_loader.py
